<?xml version="1.0"?>
<package format="2">
  <name>kinect2_republisher</name>
  <version>0.0.0</version>
  <description>The kinect2_republisher package</description>

  <maintainer email="davidwatkins@cs.columbia.edu">David Watkins</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/CRLab/kinect2_republisher</url>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
