<?xml version="1.0"?>
<package format="2">
  <name>rosbag_republisher</name>
  <version>0.0.0</version>
  <description>The rosbag_republisher package</description>

  <maintainer email="davidwatkins@cs.columbia.edu">David Watkins</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/CRLab/kinect2_republisher</url>

  <buildtool_depend>catkin</buildtool_depend>


  <export>

  </export>
</package>
